fix: overflow on low res screen animation

--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -1,6 +1,7 @@
 .authContainer {
   margin: auto;
   width: fit-content;
+  overflow-x: hidden;
   padding: 20px;
 }
 
